@@ -338,7 +338,7 @@
   <object name="join" meta_type="CMF Action" i18n:domain="plone">
    <property name="title" i18n:translate="">Register</property>
    <property name="description" i18n:translate=""></property>
-   <property name="url_expr">string:${globals_view/navigationRootUrl}/@@join_form</property>
+   <property name="url_expr">string:${globals_view/navigationRootUrl}/@@register</property>
    <property name="icon_expr"></property>
    <property name="available_expr">python:member is None</property>
    <property name="permissions">
