@@ -1,4 +1,4 @@
 <?xml version="1.0"?>
 <metadata>
-  <version>4.0a1</version>
+  <version>4.0a2</version>
 </metadata>
